# api-testing-tools

./: .dockerignore  .emdash.json  .env.example  .gitignore  .gitlab-ci.yml  .mcp.json  AGENTS.md  AUTO_UPDATE_README.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  bun.lockb  check_admin_page.mjs  docker-compose.deployment.nginx.yml  docker-compose.deployment.traefik.yml  docker-compose.yml  drizzle.config.ts  fix-info-plist.sh  jean.json  notifier.sh  nuxt.config.ts  package-lock.json  package.json  report.sh  sonar-project.properties  tailwind.config.js  test-pna.sh  tsconfig.json
src-tauri/: .env.example  Cargo.toml  fix-plist.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/server/: index.mjs  nitro.json  package.json
src-tauri/resources/server/chunks/_/: migration.mjs  migration.mjs.map  yaml-parser.mjs  yaml-parser.mjs.map
src-tauri/resources/server/chunks/nitro/: nitro.mjs  nitro.mjs.map
src-tauri/resources/server/chunks/routes/: renderer.mjs
src-tauri/resources/server/public/: index.html
src-tauri/resources/server/public/_nuxt/: -WmBlky2.js  05qokZmJ.js  0rhA9ZL5.js  3epYwH2d.js  4dZzLvAB.js  50xgXKAR.js  5dx0yWsz.js  6uDlbufz.js  7Kb37Gs4.js  AppSidebar.DX_N3Vtk.css  B2WbRpZO.js  B2n0vkIu.js  B7hdjI4Y.js  B9SmyarN.js  BB30f_0O.js  BB4xq5AQ.js  BBRm0dEe.js  BBf_eKg-.js  BE-6efC6.js  BEAzWMew.js  BH11N1P7.js  (+176 more)
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: api.rs  mod.rs  oauth.rs  updater.rs
src-tauri/src/models/: http.rs
src-tauri/src/utils/: http_client.rs
(+595 files in other folders)
